ukui-notebook (3.1.1-1) v101; urgency=medium
  
  * Bug:
        #59697 【便签贴】更改通过便签页打开便签贴时按钮文案为“打开便签贴”
        #101214【sp2 UI走查】便签本ui问题
          - 用户手册文案部分
  * 任务:
  * 其他改动说明：无
  * 其他改动影响域：无

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Wed, 02 Mar 2022 14:29:27 +0800

ukui-notebook (3.1.1) v101; urgency=medium
  
  * Bug:
        #97309 【便签本】在深色模式下，不选中文字选其他颜色，再选中文字后右下角文字颜色显示为黑色
        #97268 【便签本】英文系统下，在任意便签贴插入图片便签本中显示中文“图片”
        #95289 【SP2 UI走查】【便签】便签页颜色需与系统控件 保持一致
        #95283 【SP2 UI走查】【便签】切换字体颜色未与设计图保持一致
        #77972 【麒麟便签本】【主体框架】MessageBox-麒麟便签本清空便签本的弹窗以及弹窗内部组件均未适配主题框架
  * 任务:
  * 其他改动说明：无
  * 其他改动影响域：无

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Fri, 24 Dec 2021 14:31:20 +0800

ukui-notebook (3.1.0-1-0044) v101; urgency=medium

  * Bug:  95385 【便签】【用户手册】便签帮助手册未跳转到指定页面
  * Bug:  67440 【便签本】从便签本打开帮助，没有直接跳到便签本的介绍
  * 任务：
  * 其他改动说明：无
  * 其他改动影响域：无

 -- hanzehui <hanzehui@kylinos.cn>  Thu, 20 Dec 2021 16:19:21 +0800

ukui-notebook (3.1.0-1-0043) v101; urgency=medium

  * Bug:
        #97028 【便签本】设置15号字体下便签本列表模式下字体显示超出边框
        #77125 【便签贴】字体调大后，列表信息显示不全
        #75461 【便签】便签页界面随控制面板主题变化而变化
        #69531 【便签】便签页ui显示问题
        #60858 【便签本+工具栏按钮三态为按照设计稿实现+6499】
        #57519 【麒麟便签】便签本视图切换设置无效，重启应用后恢复为默认视图
  * 任务:
  * 其他改动说明：修改了部分变量命名规则
  * 其他改动影响域：无

 -- jiangdingyuan <jiangdingyuan@kylinos.cn>  Mon, 20 Dec 2021 11:03:33 +0800

ukui-notebook (3.1.0-1-0042) v101; urgency=medium

  * Bug: 
        #93063 【便签本】在便签本新建多个便签贴，点击下方的删除按钮，存在一次性删除两个便签贴
        #93928 【SP2 UI走查】【便签】字号选择时悬停颜色是绿色
        #93148 【便签本】关于的版本与终端显示不一致
        #93072 【便签本】在便签本切换视图为图标显示，新建的第一张便签贴字体显示不一致
        #92841 【便签】“字体颜色”选框中预览颜色的位置不居中
        #92838 【便签】鼠标悬停在“字体颜色”选框中预览颜色的位置，为不选中状态
        #92835 【便签】字号显示不全
        #92516 【便签本】切换系统主题为深色模式，便签页中“有序列表”图标没有反白，图标显示不出来
        #92422 【SP2 UI走查】【便签本】部分UI界面与设计图不符
  * 任务:
  * 其他改动说明：修改了部分变量命名规则
  * 其他改动影响域：无

 -- Xin Li <lixin@kylinos.cn>  Mon, 29 Nov 2021 18:01:40 +0800

ukui-notebook (3.1.0-1-0041) v101; urgency=medium

  * Bug: