@@ -1,0 +1,10 @@
+#include "font_color_push_button.h"
+
+FontColorPushButton::FontColorPushButton(QWidget *parent = 0)
+    : QPushButton(parent)
+{
+}
+
+FontColorPushButton::~FontColorPushButton()
+{
+}
