@@ -82,7 +82,7 @@ private:
 
 private:
     void paintBackground(QPainter* painter, const QStyleOptionViewItem &option, const QModelIndex &index)const;
-    void paintLabels(QPainter* painter, const QStyleOptionViewItem &option, const QModelIndex &index) const;
+    void paintLabels(QPainter* painter, const QStyleOptionViewItem &option, const QStyleOptionViewItem &opt, const QModelIndex &index) const;
     void paintSeparator(QPainter *painter, const QStyleOptionViewItem &option, const QModelIndex &index) const;
     QString parseDateTime(const QDateTime& dateTime) const;
 
